Fixed halo gap issue

--- a/src/components/ContactPage/contactPage.scss
+++ b/src/components/ContactPage/contactPage.scss
@@ -154,11 +154,11 @@
   }
 }
 
-@media screen and (max-width:400px) {
+@media screen and (max-width:420px) {
   .container-contact-page {
     overflow-wrap: break-word;
     .text-zone {
-      margin-top: 43%;
+      margin-top: 44%;
     }
   }
 }
